<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Store-Check</string>
    <string name="product_name">Product Name: </string>
    <string name="product_price">Price: </string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="nbo">NBO: </string>
    <string name="gbo">GBO: </string>
    <string name="brand">Brand: </string>
    <string name="packSize">Pack Size: </string>
    <string name="packUnit">Unit: </string>
    <string name="outlet">Outlet: </string>
    <string name="search_hint">Product Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="browse_file">Browse file</string>
<<<<<<< HEAD
    <string name="browse_folder">Browse folder</string>
    <string name="export">Export Store Check Data</string>
=======
    <string name="export">Export</string>
>>>>>>> 99b63f44d695ee70bb86b37579340c061de44402
    <string name="product_details">View/Edit Product Details </string>
    <string name="browse_button_name">Browse</string>
    <string name="geography">Geography</string>
    <string name="product">Product</string>
    <string name="brandName">Brand</string>
    <string name="nboName">NBO</string>
    <string name="customFields">Custom Fields</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="title_activity_outlet">outlet</string>
    <string name="multipack">Multipack</string>
    <string name="filename">Filename</string>
</resources>
