<layout>
    <data>
        <variable
            name="storeCheckBrand"
            type="com.euromonitor.storecheck.model.StoreCheckBrand"/>
        <variable
            name="listeners"
            type="com.euromonitor.storecheck.app.StoreCheckAddBrandFragment.Listeners"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="8"
            android:columnCount="2"
            android:layout_margin="@dimen/material_item_margin">
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/geography"
                android:layout_margin="@dimen/material_item_margin"
                android:textSize="@dimen/detailfont_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{storeCheckBrand.Geography.geographyName}"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="@dimen/material_item_margin"
                android:textSize="@dimen/detailfont_size"/>

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/product"
                android:layout_margin="@dimen/material_item_margin"
                android:textSize="@dimen/detailfont_size"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:id="@+id/products"
                android:drawSelectorOnTop="true"
                android:layout_margin="@dimen/material_item_margin"
                android:backgroundTint="@color/blue_500"/>

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/brand"
                android:layout_margin="@dimen/material_item_margin"
                android:textSize="@dimen/detailfont_size"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{storeCheckBrand.brand}"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="@dimen/material_item_margin"
                android:textSize="@dimen/detailfont_size"/>

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/nboName"
                android:layout_margin="@dimen/material_item_margin"
                android:textSize="@dimen/detailfont_size"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{storeCheckBrand.NBO}"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_margin="@dimen/material_item_margin"
                android:textSize="@dimen/detailfont_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_columnSpan="2"
                android:layout_column="0"
                android:orientation="vertical"
                android:layout_margin="@dimen/default_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customFields"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/customFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>

            <Button
                android:layout_row="7"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_left"
                android:text="@string/reset"
                android:onClick="@{listeners}"
                android:id="@+id/resetAddBrand"/>

            <Button
                android:layout_row="7"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_left"
                android:text="@string/ok"
                android:onClick="@{listeners}"
                android:id="@+id/okAddBrand"
                />

        </GridLayout>
    </LinearLayout>
</layout>