<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data  >
        <variable
            name="productDetails"
            type="com.euromonitor.storecheck.model.ProductDetail"/>
    </data>
    <android.support.v4.widget.DrawerLayout
        android:id="@+id/addProductDetails_Drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/PopupTheme"
            android:theme="@style/ToolBarTheme"
            android:id="@+id/productDetailsToolbar"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="7"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_font_size"
                android:textColor="@color/blue_600"
                android:text="@{productDetails.brandName}"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_margin="@dimen/material_item_margin"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/multipack"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="@dimen/default_margin"
                android:textColor="@color/grey_700"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="@dimen/material_item_margin"
                android:drawSelectorOnTop="true"
                app:theme="@style/MaterialTheme"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/packSize"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="@dimen/material_item_margin"/>

            <EditText
                android:layout_width="@dimen/maximum_item_width"
                android:layout_height="wrap_content"
                android:text="@{productDetails.packSize}"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="@dimen/material_item_margin"
                android:inputType="numberDecimal"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_margin="@dimen/material_item_margin"
                android:drawSelectorOnTop="true"
                app:theme="@style/MaterialTheme"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:layout_margin="@dimen/material_item_margin"
                />


        </GridLayout>

    </LinearLayout>
        <FrameLayout
            android:id="@+id/navDrawerFrame"
            android:name="com.euromonitor.storecheck.app.StoreCheckNavigationFragment"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/storecheck_navigation_drawer"
            tools:layout="@layout/storecheck_navigation_drawer"
            />
    </android.support.v4.widget.DrawerLayout>
</layout>