<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <data>
        <variable
            name="pricingDetail"
            type="com.euromonitor.Storechecker.model.PricingDetail"/>
    </data>
    <android.support.v4.widget.DrawerLayout
        android:id="@+id/addProductDetails_Drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/PopupTheme"
                android:theme="@style/ToolBarTheme"
                android:id="@+id/productDetailsToolbar"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:rowCount="18"
                    android:columnCount="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ProductType"
                        android:layout_marginLeft="10dp"
                        android:layout_row="0"
                        android:textColor="@color/blue_500"
                        android:layout_column="0"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/productName"
                        android:background="@drawable/edit_text_shape"
                        android:textSize="15dp"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@{pricingDetail.productName}"
                        android:clickable="false"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/blue_500"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:text="@string/brandName"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:id="@+id/brandName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_shape"
                        android:textSize="15dp"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@{pricingDetail.brandName}"
                        android:clickable="false"/>
                    <TextView  android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="Pack and pricing details"
                        android:textColor="@color/blue_500"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_row="4"
                        android:layout_column="0"
                        android:layout_marginLeft="10dp"/>
                    <LinearLayout
                        android:layout_row="5"
                        android:layout_column="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/blue_500"
                        android:text="@string/outlet"
                        android:layout_marginTop="20dp"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/outlets"
                        android:layout_marginTop="18dp"
                      android:layout_marginLeft="80dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_row="6"
                        android:layout_column="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/blue_500"
                        android:layout_marginLeft="10dp"
                        android:text="@string/multipack"/>
                    <EditText
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@{pricingDetail.multiPack}"
                        android:background="@drawable/edit_text_shape"
                        android:inputType="number"
                        android:layout_marginLeft="60dp"
                        android:id="@+id/multiPacks"
                        android:selectAllOnFocus="true"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_row="7"
                        android:layout_column="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/blue_500"
                        android:text="@string/packSize"/>
                    <EditText
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:background="@drawable/edit_text_shape"
                        android:text="@{pricingDetail.packSize}"
                        android:inputType="numberDecimal"
                        android:id="@+id/packSize"
                        android:selectAllOnFocus="true"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Unit"
                            android:layout_marginLeft="20dp"
                            android:textColor="@color/blue_500"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:layout_marginTop="0dp"
                        android:id="@+id/units"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_row="8"
                        android:layout_column="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/blue_500"
                        android:text="Price"/>
                    <EditText
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_shape"
                        android:id="@+id/price"
                        android:layout_marginLeft="90dp"
                        android:text="@{pricingDetail.price}"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_row="9"
                        android:layout_column="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/blue_500"
                        android:text="@string/packType"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:id="@+id/packType"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_row="10"
                        android:layout_column="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/blue_500"
                android:text="@string/customFields"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/customFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
                    </LinearLayout>
                </GridLayout>
                </ScrollView>
            </LinearLayout>
        <FrameLayout
            android:id="@+id/navDrawerFrame"
            android:name="com.euromonitor.Storechecker.app.StoreCheckNavigationFragment"
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/storecheck_navigation_drawer"
            tools:layout="@layout/storecheck_navigation_drawer"
            />
        </android.support.v4.widget.DrawerLayout>
    </layout>